--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foam-digital-garden",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
   "scripts": {
     "develop": "gatsby develop",
