--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gatsby": "^2.21.37",
+    "gatsby-remark-wiki-link": "^0.4.1",
     "gatsby-theme-garden": "^0.1.1",
     "prism-react-renderer": "^1.2.0",
     "prismjs": "^1.23.0",
